--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 permalink:           pretty
 
 # Setup
-title:               Z.W. Miller
-tagline:             A Moderately Okay Data Science Blog
-url:                 http://zwmiller.github.io
+title:               Lliana Shi
+tagline:             A Forward Propagating Data Science Blog
+url:                 http://llianashi.github.io
 paginate:            2
 baseurl:             ""
 
@@ -17,14 +17,14 @@ sass:
 
 # About/contact
 author:
-  name:              Zach Miller
-  url:               https://twitter.com/zaglamir
-  email:             zach@thisismetis.com
+  name:              Lliana Shi
+  url:               https://www.linkedin.com/in/shi-heping-3b453826/
+  email:             lliana.shi@hotmail.com
 
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/zwmiller
+  repo:              https://github.com/llianashi
 
 # Gems
 gems:
